Depends on both octoprint services for code-server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
     ports:
       - 8443:8443
     depends_on:
-      - octoprint
+      - octoprint-cocoon
+      - octoprint-flsun
     restart: unless-stopped
     environment:
       - PUID=0
